<resources>
    <string name="app_name">Polysmee</string>
    <string name="android_description_reminder_notification_service">The service allows reminder notifications to be synced online (i.e. with other application users).</string>
    <string name="roomActivityReceiveButton">Receive</string>
    <string name="roomActivitySendButton">Send</string>
    <string name="roomActivityMessagesTab">Messages</string>
    <string name="roomActivityParticipantsTab">Participants</string>
    <string name="roomInfoNotOwnerToastMessage">"Only the owner can change settings"</string>

    <string name="calendarActivityTodayDateMyAppointments">Date</string>
    <string name="calendarActivityRefreshButton">Refresh</string>
    <string name="calendarActivityCreateAppointmentButton">Create</string>
    <string name="calendarEntryDescription">Description</string>
    <string name="calendarEntryDetailsButton">Details</string>
    <string name="calendarEntryDetailActivityModifyButton">Modify</string>
    <string name="calendarEntryDetailsActivityKickButton">Kick</string>
    <string name="calendarEntryDetailsActivityInviteButton">Add</string>
    <string name="calendarEntryDetailsActivityBanButton">Ban</string>
    <string name="calendarEntryDetailsActivityInviteHint">Who do you want to add?</string>
    <string name="calendarEntryDetailsActivityBanHint">Who do you want to ban?</string>

    <string name="title_activity_appointment" translatable="false">AppointmentActivity</string>
    <string name="title_activity_login_check" translatable="false">LoginCheckActivity</string>
    <string name="login_welcome">Welcome to Polysmee !</string>
    <string name="user_prompt">You are not connected. Please login !</string>
    <string name="login">Login</string>
    <string name="loginActivityNoNetwork">no network is available</string>
    <string name="loginActivityUserCancelled">user canceled login</string>
    <string name="loginNoConnection">No network is available for the first login !</string>
    <string name="loginNoConnectionRetry">Retry</string>

    <string name="appointment_creation_appointment_title">Title</string>
    <string name="appointment_creation_appointment_course">Course</string>
    <string name="appointment_creation_pick_start_time">Click to set</string>
    <string name="appointment_creation_pick_end_time">Click to set</string>
    <string name="appointment_creation_done_create_appointment">Done - Create Appointment</string>
    <string name="appointment_creation_reset_btn_txt">Reset</string>
    <string name="appointment_creation_maximum_duration_of_an_appointment_is_4h">Maximum duration of an appointment is 4h</string>
    <string name="appointment_creation_only_users_in_database">You can only invite or ban users in the database</string>
    <string name="appointment_creation_end_txt">End :</string>
    <string name="appointment_creation_end_time_txt">Click to set</string>
    <string name="appointment_creation_start_txt">Start :</string>
    <string name="appointment_creation_start_time_txt">Click to set</string>
    <string name="appointment_settings_invite_user">Invite User</string>
    <string name="appointment_settings_ban_user">Ban User</string>

    <string name="appointment_creation_settings">Settings</string>
    <string name="appointment_settings_invite">Invite people</string>
    <string name="appointment_settings_ban">Ban people</string>
    <string name="appointment_settings_private">Private Appointment</string>
    <string name="appointment_settings_btn_invite">Invite</string>
    <string name="appointment_settings_btn_ban">Ban</string>
    <string name="appointment_settings_btn_done">Done</string>

    <string name="roomActivityParticipantDialogRemoveButton">Remove</string>
    <string name="roomInfoTitleText">Title</string>
    <string name="roomInfoCourseText">Course</string>
    <string name="roomTabMessagesText">Messages</string>
    <string name="roomTabVideoText">Video</string>
    <string name="roomTabCallText">Participants</string>
    <string name="roomMessageOptionText">Choose an option</string>
    <string name="roomEditMessageText">Edit message</string>
    <string name="app_id" translatable="false">a255f3c708ab4e27a52e0d31ec25ce56</string>
    <string name="app_certificate" translatable="false">1b4283ea74394f209ccadd74ac467194</string>

    <string name="friendsActivityEncouragingMessage1">Invite and see your friends below!</string>
    <string name="friendsActivityEncouragingMessage2">Add friends here!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dark_theme_text">Dark theme</string>
    <string name="roomActivityRemovedDialogQuitButton">Quit appointment</string>
    <string name="roomActivityRemovedDialogText">You are not a member of this appointment!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="AppointmentActivityDetailModeApplyChanges">Apply changes</string>
    <string name="AppointmentActivityDetailModeParticipants">Participants</string>
    <string name="AppointmentActivityDetailModeBannedParticipants">Banned participants</string>
    <string name="appointmentCreationTimeError">Start and end time must result in a correct time slot</string>
    <string name="appointmentCreationAddBanError">A user cannot be both added and banned</string>
    <string name="calendarActivityTodayDatePublicAppointments">Date</string>
    <string name="invites_management_current_invitations">Current invitations</string>
    <string name="invites_management_current_invitations_appointments">Appointments</string>
    <string name="invites_management_current_invitations_Friends">Friends</string>
    <string name="friendActivityInviteButton">Invite</string>
    <string name="calendarActivityPublicAppointmentsCourse">Course</string>
    <string name="calendarActivityPublicAppointmentsFilter">Filter</string>
    <string name="calendarActivityMyAppointments">My appointments</string>
    <string name="calendarActivityPublicAppointments">Public appointments</string>
    <string name="genericTitlePlaceHolder">Title</string>
    <string name="genericDatePlaceholder">Date</string>
    <string name="genericJoinText">Join</string>
    <string name="genericAcceptText">Accept</string>
    <string name="genericRefuseText">Refuse</string>
    <string name="genericSenderPlaceholder">Sender</string>
    <string name="genericContentPlaceholder">Content</string>
    <string name="genericParticipantPlaceholder">Participant</string>
    <string name="genericOwnerText">Owner</string>
    <string name="genericPictureFailedToLoadText">Picture failed to load</string>
    <string name="genericCreateANewAppointmentText">Create a new appointment</string>
    <string name="genericErrorText">An error occurred</string>
    <string name="restartErrorText">An error occurred, please restart the application</string>
    <string name="genericOkText">OK</string>
    <string name="genericCourseNotFoundText">Course not found</string>
    <string name="genericUserNotFoundText">User not found</string>
    <string name="genericNamesHintText">Type Names Here</string>
    <string name="genericYouText">You</string>
    <string name="genericWaitText">Please wait</string>
    <string name="genericEditText">Edit</string>
    <string name="genericCancelText">Cancel</string>
    <string name="default_course">Others</string>
    <string name="inCallError">You cannot do this action while in call</string>
    <string name="offline_send_message">The message will be sent when your device connects to the internet</string>
    <string name="offline_picture">The picture will be sent when your device connects to the internet</string>
    <string name="offline_edit_message">The message will be edited when your device connects to the internet</string>
    <string name="offline_call">You need to be connected to the internet in order to make calls</string>
    <string name="genericCourseText">Course</string>
    <string name="invitesCourseText">"Course : "</string>
    <string name="appointment_reminder_notification_notification_text">Appointment reminder :)</string>
    <string name="offline_warning">Warning</string>
    <string name="offline_appointment">You are currently offline, the appointment you create will go online when your device connects to the internet. The appointment course will be set to the default value \'Others\', you will be able to edit it once online.</string>
    <string name="offline_ok">OK</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Are you sure you want to delete the appointment ?</string>
    <string name="leave_message">Are you sure you want to leave the appointment ?</string>
    <string name="leave">Leave</string>
    <string name="sort_by_date">Sort by chronological order</string>
    <string name="sort_by_participants">Sort by number of participants</string>
    <string name="participants" translatable="false">participant(s)</string>
    <string name="emoji_joy" translatable="false">&#128514;</string>
    <string name="emoji_sunglasses" translatable="false">&#128526;</string>
    <string name="emoji_heart_eyes" translatable="false">&#128525;</string>
    <string name="emoji_expression_less" translatable="false">&#128529;</string>
    <string name="emoji_sad" translatable="false">&#128542;</string>
    
</resources>