<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar.detailsFragments.CalendarEntryDetailAddBanParticipantsFragment">

    <Button
        android:id="@+id/calendarEntryDetailActivityBanButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="159dp"
        android:text="@string/calendarEntryDetailsActivityBanButton"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarEntryDetailActivityBanSearch"
        app:layout_constraintVertical_bias="0.087" />

    <SearchView
        android:id="@+id/calendarEntryDetailActivityBanSearch"
        android:layout_width="329dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="41dp"
        android:queryHint="@string/calendarEntryDetailsActivityBanHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarEntryDetailActivityInviteButton" />

    <SearchView
        android:id="@+id/calendarEntryDetailActivityInviteSearch"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="41dp"
        android:queryHint="@string/calendarEntryDetailsActivityInviteHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/calendarEntryDetailActivityInviteButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="159dp"
        android:text="@string/calendarEntryDetailsActivityInviteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarEntryDetailActivityInviteSearch" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="47dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="516dp" />
</androidx.constraintlayout.widget.ConstraintLayout>